# gtest-demo

./: .gitignore  .travis.yml  AUTHORS  LICENSE  Makefile.am  README.md  autogen.sh  config.h.in  configure.ac
src/: Makefile.am  demo.cc  func.cc  func.h
src/.deps/: demo.Po
test/: Makefile.am  func_test.cc
